tests/harness/errors/100_fn_call_source_loc.eu
# Error: type mismatch calling str.letters(42) — error should point to user's call site
result: str.letters(42)
